--- a/doc/kdevelop/index.docbook
+++ b/doc/kdevelop/index.docbook
@@ -44,7 +44,7 @@ Entries which require special treatment are marked with comments starting with '
 <bookinfo>
   <title>&kdevelop; User Manual</title>
 
-  <date>2004-03-04</date>
+  <date>2004-03-10</date>
   <releaseinfo>&kdevrelease;</releaseinfo>
 
   <authorgroup>
@@ -119,67 +119,82 @@ You will here find information on the following topics:
   <listitem><para>
   <link linkend="nutshell">In a Nutshell&mdash;Tips and Tricks</link>&mdash;a quick reference of the most used commands and actions.
   </para></listitem>
+
   <listitem><para>
   <link linkend="unixdev">Development on UNIX</link>&mdash;a historical survey of UNIX program development, the main tools necessary and why you need an IDE.
   </para></listitem>
+
   <listitem><para>
   <link linkend="kdevelop-install">Installing &kdevelop;</link>&mdash;tells you where to obtain &kdevelop; and how to get it up and running.
   </para></listitem>
+
   <listitem><para>
   <link linkend="kdevelop-survey">Survey of the Features of &kdevelop;</link>&mdash;is some kind of a warm-up, giving a short overall view of what is built-in into &kdevelop; and makes you acquainted with the look and feel of this IDE.
   </para></listitem>
+
   <listitem><para>
   <link linkend="app-menus">Menus and Toolbars Survey</link>&mdash;(in the appendix) provides you with a short overall view of the menu and toolbar selections available.
   </para></listitem>
+
   <listitem><para>
   <link linkend="app-shortcuts">Shortcut Keys</link>&mdash;(in the appendix) lists the key sequences you may use to quickly access some specific &kdevelop; operation.
   </para></listitem>
+
   <listitem><para>
   <link linkend="setup">Configuring &kdevelop;</link>&mdash;shows how you can taylor the IDE to suit your needs.
   </para></listitem>
+
   <listitem><para>
   <link linkend="applicationwizard">Getting started: the &appwizard;</link>&mdash;describes the basics on how to set up a new project in &kdevelop; using the built-in &appwizard;.
   </para></listitem>
-  <listitem><para>
-  <link linkend="project-management">Building and Project Management</link>&mdash;shows how to use the &automanag; to control the  <filename>Makefile</filename> structure of a project.
-  </para></listitem>
+
   <listitem><para>
   <link linkend="projects-advanced">Advanced Project Management</link>&mdash;shows how to load existing projects, convert projects from older &kdevelop; versions, and import other existing projects. Furthermore the configuration of a project's options to suit your needs is discussed.
   </para></listitem>
+
   <listitem><para>
   <link linkend="editing">Editing tools</link>&mdash;all you need to write your source files: using the editor, searching for text both locally and project-wide, up to integrating new files and classes into the project.
   </para></listitem>
+
   <listitem><para>
   <link linkend="file-browsers">The File Browsers</link>&mdash;demonstrates various tools to look at the structure of your project and how to access the files you want to work with.
   </para></listitem>
+
   <listitem><para>
   <link linkend="class-browsers">The Class Browsers</link>&mdash;describes one of the most powerful tools of &kdevelop; which lets you navigate through class dependencies and allows to easily create and access the classes and methods you need.
   </para></listitem>
+
   <listitem><para>
   <link linkend="documentation">Documentation</link>&mdash;shows how to access the rich built-in documentation &kdevelop; provides and tells you how to create documentation of your project, concise and powerful API documentation providing you an overall view of all your project sources as well as docbook-based user documentation.
   </para></listitem>
   <listitem><para>
   <link linkend="project-management">Building and Project Management</link>&mdash;deals with the creating and management of your project, describing the basics of autoconf and automake as well as how to set up custom make files and how to use compiler or make options to taylor your application to suit your needs.
   </para></listitem>
+
   <listitem><para>
-  <link linkend="adv-project-management">Advanced Project Management</link>&mdash;looks at ways to keep multiple build configurations, to cross-compile for diverse platforms, or to make an embedded system using the <application>Qt/embedded</application> library.
+  <link linkend="adv-build-management">Advanced Build Management</link>&mdash;looks at ways to keep multiple build configurations, to cross-compile for diverse platforms, or to make an embedded system using the <application>Qt/embedded</application> library.
   </para></listitem>
+
   <listitem><para>
   <link linkend="debugger">The Debugger Interface</link>&mdash;describes how to use the integrated <application>gdb</application> debugger interface so you can hunt down bugs without leaving &kdevelop;.
   </para></listitem>
-<!-- ### Currently disabled. Probably too specialized. Check later again.
+
+<!-- ### Currently disabled. Probably too specialized programming stuff. Check later again.
   <listitem><para>
   <link linkend="python">Python</link>&mdash;a survey of how to create Python-based applications in &kdevelop;.
   </para></listitem>
   <listitem><para>
   <link linkend="php">PHP</link>&mdash; a survey of how to create PHP-based HTML applications in &kdevelop;.
   </para></listitem>//-->
+
   <listitem><para>
   <link linkend="cvs">Using CVS</link>&mdash;tells you how you can maintain your project using the CVS versioning system, a must especially if many developers work at the same project.
   </para></listitem>
+
   <listitem><para>
   <link linkend="external-progs">Leveraging External Programs</link>&mdash;shows how to access external programs and tools from within &kdevelop; thus greatly extending its capabilities.
   </para></listitem>
+
   <listitem><para>
   <link linkend="plugin-tools">Plugin tools</link>&mdash;provides you a survey of the parts which make up &kdevelop; and how you can taylor it to suit your needs by loading the necessary parts only, both IDE and project-wide.
   </para></listitem>
@@ -202,6 +217,7 @@ The information in this chapter is meant as a quick reference for a head start o
 <itemizedlist>
   <title>Look and Feel</title>
 
+  <!-- ### change this entry when the gui is available -->
   <listitem>
     <formalpara id="nutshell-IDEAl-tabs">
     <title>Force Smaller Tool View Tabs in IDEAl Mode</title>
@@ -210,12 +226,30 @@ The information in this chapter is meant as a quick reference for a head start o
     </para>
     </formalpara>
     <simplelist>
-      <member><computeroutput>MDIStyle = 0</computeroutput>: icons only</member>
-      <member><computeroutput>MDIStyle = 1</computeroutput>: text only (default)</member>
-      <member><computeroutput>MDIStyle = 2</computeroutput>: icons only on smaller tabs</member>
-      <member><computeroutput>MDIStyle = 3</computeroutput>: icons and text</member>
+      <member><computeroutput>MDIStyle=0</computeroutput>: icons only</member>
+      <member><computeroutput>MDIStyle=1</computeroutput>: text only (default)</member>
+      <member><computeroutput>MDIStyle=2</computeroutput>: icons only on smaller tabs</member>
+      <member><computeroutput>MDIStyle=3</computeroutput>: icons and text</member>
     </simplelist>
     <para>(This manual change effort is only preliminary. There will be a &GUI; configuration possibility some time in the future.)</para>
+  </listitem>
+
+  <!-- ### remove this entry when the bug is repaired -->
+  <listitem>
+    <formalpara id="nutshell-weird-style">
+    <title>Weird Colored Characters and/or Display Style</title>
+    <para>
+    If you notice random colored letters everywhere (&ie; on tabs, on tool bars, etc.) and the &kdevelop; window seemingly uses a wrong display style, this may help:
+    </para>
+    </formalpara>
+    <itemizedlist>
+      <listitem><para>
+      In your  <filename>&amp;KDEHOME/share/config/kdeveloprc</filename> configuration file find the line containing <quote><computeroutput>Style=Checked</computeroutput></quote> and remove it. Then restart &kdevelop;.
+      </para></listitem>
+    </itemizedlist>
+    <para>
+    (This behaviour does sometimes occur after you left clicked a .ui file in one of the file navigators and &kdevelop; did load <application>KUIViewer</application> to show the &GUI; which was produced from this file.)
+    </para>
   </listitem>
 
   <listitem>
@@ -1053,9 +1087,9 @@ All this documentation should be easily maintainable and ready at hand whenever 
 
 <!-- ====================================================================== -->
 
-<chapter id="adv-project-management">
-<title>Advanced Project Management</title>
-<indexterm zone="adv-project-management"><primary>&automake;</primary></indexterm>
+<chapter id="adv-build-management">
+<title>Advanced Build Management</title>
+<indexterm zone="adv-build-management"><primary>&automake;</primary></indexterm>
 
 <sect1 id="buildconfigurations">
 <title>Multiple Build Configurations</title>
@@ -1185,7 +1219,7 @@ the autoproject project management, you have to add
 
 </sect1> <!-- qtembedded -->
 
-</chapter> <!-- adv-project-management -->
+</chapter> <!-- adv-build-management -->
 
 <!-- ====================================================================== -->
 
